2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/cairo.h: Add a few more REPLACED_BY and DEPRECATED_BY
	definitions.
	
	* util/cairo-api-update: Add some helpful warnings.

2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am (libcairo_xlib_headers): Add
	cairo-xlib-xrender.h which was missed from an earlier commit.

2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am:
	* src/cairo-xcb.h:
	* src/cairo-xcb-xrender.h:
	* src/cairo-xcb-surface.c:
	(cairo_xcb_surface_create),
	(cairo_xcb_surface_create_for_bitmap),
	(cairo_xcb_surface_create_with_xrender_format): Update cairo-xcb.h
	to provide the same style of interface as cairo-xlib.h.

	* test/cairo-test.c: Update to match new cairo_xcb_surface_t
	create functions.

2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/cairo-xlib-surface.c (_get_image_surface): Avoid shifting
	32-bit quanity by 32 bits, which is undefined behavior.

2005-05-17  Carl Worth  <cworth@cworth.org>

	Rework of cairo_xlib_surface create functions by Keith Packard:

	* src/cairo-xlib-xrender.h:
	Add cairo_xlib_surface_create_with_render_format.
	
	* src/cairo-xlib.h:
	* src/cairo-xlib-surface.c:
	(cairo_xlib_surface_create),
	(cairo_xlib_surface_create_for_bitmap): Reduce Xlib constructors
	down to two simple forms. Add width, height to constructors and
	eliminate any synchronous size queries from the implementation.

	* test/cairo-test.c: (create_xlib_surface):
	* test/xlib-surface.c: (do_test): Update to match new
	cairo_xlib_surface_t create functions.

2005-05-17  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-output-stream.c: Remove destroy_closure from
	cairo_output_stream_t interface.
	
	* src/cairo-pdf.h:
	* src/cairo-pdf-surface.c: Remove destroy_closure argument from
	cairo_pdf_surface_create_for_stream. Rename width,height to
	width_in_points, height_in_points for better clarity.

	* src/cairo-ps.h:
	* src/cairo-ps-surface.c: Brush a bunch of dust off of the PS